2010-01-15  Neal H. Walfield  <neal@gnu.org>

	Always use the default caption in the queue tab.
	Reported by Thomas Schwinge <tschwinge@gnu.org>.
	* src/starling.c (notebook_switch_page_cb)
	[!HAVE_HILDON_STACKABLE_WINDOWS]: New function.
	(title_data_func): If the current notebook page is the queue, use
	the normal caption format.
	(starling_run) [!HAVE_HILDON_STACKABLE_WINDOWS]: Connect
	notebook_switch_page_cb to ST->NOTEBOOK's "switch-page" signal.

2010-01-13  Neal Walfield  <neal@gnu.org>

	* src/starling.c (play_list_selector_changed_to): Only run
	play_list_selector_changed_flush from an idle handler if
	INITIAL_RESTORE is false.

2010-01-13  Neal H. Walfield  <neal@gnu.org>

	* src/caption.c (build): Be sure to fill in the format part of the
	caption.

2010-01-13  Neal Walfield  <neal@gnu.org>

	* configure.ac: Corrently set the HILDON conditional.

2010-01-13  Neal Walfield  <neal@gnu.org>

	* src/main.c (USE_CACHE_WARMER) [HAVE_MAEMO]: Define.
	(cache_warmer_quit) [HAVE_MAEMO]: New global.
	(cache_warmer) [HAVE_MAEMO]: New function.
	(main) [USE_CACHE_WARMER]: Create a thread that executes
	cache_warmer.  Set cache_warmer_quit to true once starling_run
	returns.

2010-01-13  Neal Walfield  <neal@gnu.org>

	* configure.ac: Fix typo: when determining whether to define
	HAVE_HILDON, check if HAVE_HILDON_VERSION is defined, not
	HAVE_MAEMO_VERSION.

2010-01-12  Neal H. Walfield  <neal@gnu.org>

	* src/caption.c: Fix warnings.
	* src/caption.h: Likewise.
	* src/player.c: Likewise.
	* src/starling-catalog.c: Likewise.

2010-01-12  Neal H. Walfield  <neal@gnu.org>

	* src/playlist.c (play_list_constrain): If CONSTRAINT is the empty
	string, set PL->CONSTRAINT to NULL.

	(changed_entry): Don't emit a "row-changed" signal if IDX is -1.

2010-01-12  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_play_list_dequeue): Only emit a
	"removed-from-play-list" signal if we actually remove something.

2010-01-12  Neal H. Walfield  <neal@gnu.org>
