@@ -1,3 +1,11 @@
+2010-01-25  Neal H. Walfield  <neal@gnu.org>
+
+	* src/starling.c [HAVE_HILDON_VERSION >= 202]: Only include
+	<hildon/hildon-button.h> and <hildon/hildon-check-button.h> in
+	this case.
+	(update_library_count_flush): Use g_assert, not assert.
+	Reported by Graham Cobb <g+770@cobb.uk.net>.
+
 2010-01-15  Neal H. Walfield  <neal@gnu.org>
 
 	Always use the default caption in the queue tab.
